--- a/info.plist
+++ b/info.plist
@@ -10,6 +10,16 @@
 		<array>
 			<dict>
 				<key>destinationuid</key>
+				<string>74F6710C-1C06-4955-9B9A-7514B4C1AE58</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
 				<string>F34201E5-52DD-45C8-9E1A-828DEFB2A724</string>
 				<key>modifiers</key>
 				<integer>1048576</integer>
@@ -94,6 +104,32 @@
 				<false/>
 			</dict>
 		</array>
+		<key>74F6710C-1C06-4955-9B9A-7514B4C1AE58</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>9D482EBF-AF05-4EEC-8B4D-C62125906078</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>9D482EBF-AF05-4EEC-8B4D-C62125906078</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>E1910C6A-0906-416C-B63B-15F3BE9CC52B</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>ABA0DF5B-E3B5-4CB5-9D4B-66FE30AF879D</key>
 		<array>
 			<dict>
@@ -164,7 +200,7 @@
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>Github Action Workflow</string>
+	<string>Github Action Worfklow</string>
 	<key>objects</key>
 	<array>
 		<dict>
@@ -217,6 +253,38 @@
 			<string>38863873-18DD-4920-A28E-1B8A1AF85CE8</string>
 			<key>version</key>
 			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>#echo "repo ${repo} runID ${runID}"
+
+./bin/watch_run -repo "${repo}" -runID "${runID}" &gt; /dev/null
+
+res=$?
+if [ $res -eq "0" ]; then
+	echo "succeeded"
+else
+	echo "failed"
+fi</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>9D482EBF-AF05-4EEC-8B4D-C62125906078</string>
+			<key>version</key>
+			<integer>2</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -349,6 +417,26 @@
 				<dict>
 					<key>repo</key>
 					<string>{var:repo}</string>
+				</dict>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.argument</string>
+			<key>uid</key>
+			<string>74F6710C-1C06-4955-9B9A-7514B4C1AE58</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>argument</key>
+				<string></string>
+				<key>passthroughargument</key>
+				<false/>
+				<key>variables</key>
+				<dict>
+					<key>repo</key>
+					<string>{var:repo}</string>
 					<key>workflow</key>
 					<string>{query}</string>
 				</dict>
@@ -357,6 +445,27 @@
 			<string>alfred.workflow.utility.argument</string>
 			<key>uid</key>
 			<string>38278A50-718C-4145-A3C0-52ACD468B7E9</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>lastpathcomponent</key>
+				<false/>
+				<key>onlyshowifquerypopulated</key>
+				<true/>
+				<key>removeextension</key>
+				<false/>
+				<key>text</key>
+				<string>{var:repo} &gt;&gt; {var:branch}</string>
+				<key>title</key>
+				<string>{var:workflow} #{var:runNumber} {query}</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.notification</string>
+			<key>uid</key>
+			<string>E1910C6A-0906-416C-B63B-15F3BE9CC52B</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -446,8 +555,7 @@
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
-				<string>echo ${token}
-./bin/entry -login "${token}" &gt; /dev/null
+				<string>./bin/entry -login "${token}" &gt; /dev/null
 res=$?
 if [ $res -eq "0" ]; then
 	echo "login succeeded"
@@ -653,12 +761,26 @@ Run `gha-login` to authenticate with Github</string>
 			<key>ypos</key>
 			<integer>400</integer>
 		</dict>
+		<key>74F6710C-1C06-4955-9B9A-7514B4C1AE58</key>
+		<dict>
+			<key>xpos</key>
+			<integer>975</integer>
+			<key>ypos</key>
+			<integer>75</integer>
+		</dict>
 		<key>7B2472FF-19EC-451F-8FB4-F21994DA5B36</key>
 		<dict>
 			<key>xpos</key>
 			<integer>880</integer>
 			<key>ypos</key>
 			<integer>640</integer>
+		</dict>
+		<key>9D482EBF-AF05-4EEC-8B4D-C62125906078</key>
+		<dict>
+			<key>xpos</key>
+			<integer>1095</integer>
+			<key>ypos</key>
+			<integer>50</integer>
 		</dict>
 		<key>ABA0DF5B-E3B5-4CB5-9D4B-66FE30AF879D</key>
 		<dict>
@@ -687,6 +809,13 @@ Run `gha-login` to authenticate with Github</string>
 			<integer>385</integer>
 			<key>ypos</key>
 			<integer>590</integer>
+		</dict>
+		<key>E1910C6A-0906-416C-B63B-15F3BE9CC52B</key>
+		<dict>
+			<key>xpos</key>
+			<integer>1280</integer>
+			<key>ypos</key>
+			<integer>155</integer>
 		</dict>
 		<key>F34201E5-52DD-45C8-9E1A-828DEFB2A724</key>
 		<dict>
